--- a/configure.ac
+++ b/configure.ac
@@ -1056,6 +1056,7 @@ src/Mod/Sandbox/App/Makefile
 src/Mod/Sandbox/Gui/Makefile
 src/Mod/Surfaces/Makefile
 src/Mod/Ship/Makefile
+src/Mod/OpenSCAD/Makefile
 src/Tools/Makefile
 src/Tools/_TEMPLATE_/Makefile
 src/Tools/_TEMPLATE_/App/Makefile
