0000830: Part Design Fillet and Chamfer icons should be different from the Part icons

--- a/src/Mod/PartDesign/Gui/Resources/Makefile.am
+++ b/src/Mod/PartDesign/Gui/Resources/Makefile.am
@@ -37,6 +37,7 @@ EXTRA_DIST = \
 		translations/PartDesign_uk.ts \
 		translations/PartDesign_zh.qm \
 		translations/PartDesign_zh.ts \
+		icons/PartDesign_Chamfer.svg \
 		icons/PartDesign_Fillet.svg \
 		icons/PartDesign_Groove.svg \
 		icons/PartDesign_Pad.svg \
