Created shaft wizard (moved here from PartDesign branch)

--- a/src/Mod/PartDesign/CMakeLists.txt
+++ b/src/Mod/PartDesign/CMakeLists.txt
@@ -29,3 +29,28 @@ INSTALL(
         Mod/PartDesign/Scripts
 )
 
+SET(WizardShaft_SRCS
+        WizardShaft/__init__.py
+	WizardShaft/WizardShaft.py
+	WizardShaft/WizardShaftTable.py
+	WizardShaft/Shaft.py
+	WizardShaft/ShaftFeature.py
+	WizardShaft/ShaftDiagram.py
+	WizardShaft/SegmentFunction.py
+)
+SOURCE_GROUP("wizardshaft" FILES ${WizardShaft_SRCS})
+
+SET(all_files ${WizardShaft_SRCS})
+
+ADD_CUSTOM_TARGET(WizardShaft ALL
+    SOURCES ${all_files}
+)
+
+fc_copy_sources(Mod/PartDesign "${CMAKE_BINARY_DIR}/Mod/PartDesign" ${all_files})
+
+INSTALL(
+    FILES
+        ${WizardShaft_SRCS}
+    DESTINATION
+        Mod/PartDesign/WizardShaft
+)
