Fix autotools, fix warning

--- a/src/Mod/PartDesign/App/Makefile.am
+++ b/src/Mod/PartDesign/App/Makefile.am
@@ -21,18 +21,28 @@ libPartDesign_la_SOURCES=\
 		FeatureGroove.h \
 		Body.cpp \
 		Body.h \
+		FeatureLinearPattern.cpp \
+		FeatureLinearPattern.h \
+		FeatureMirrored.cpp \
+		FeatureMirrored.h \
+		FeatureMultiTransform.cpp \
+		FeatureMultiTransform.h \
+		FeaturePolarPattern.cpp \
+		FeaturePolarPattern.h \
+		FeatureScaled.cpp \
+		FeatureScaled.h \
 		FeatureSketchBased.cpp \
 		FeatureSketchBased.h \
 		FeatureRevolution.cpp \
 		FeatureRevolution.h \
 		FeatureAdditive.cpp \
 		FeatureAdditive.h \
-		FeaturePatternRectangular.cpp \
-		FeaturePatternRectangular.h \
 		FeatureSubtractive.cpp \
 		FeatureSubtractive.h \
 		FeatureHole.cpp \
 		FeatureHole.h \
+		FeatureTransformed.cpp \
+		FeatureTransformed.h \
 		PreCompiled.cpp \
 		PreCompiled.h
 
