Use variable OCC_OCAF_LIBRARIES for OCAF libs

--- a/src/Mod/Import/Gui/CMakeLists.txt
+++ b/src/Mod/Import/Gui/CMakeLists.txt
@@ -22,11 +22,7 @@ link_directories(${OCC_LIBRARY_DIR})
 set(ImportGui_LIBS
     FreeCADGui
     PartGui
-    TKCAF
-    TKXCAF
-    TKLCAF
-    TKXDESTEP
-    TKXDEIGES
+    ${OCC_OCAF_LIBRARIES}
 )
 
 SET(ImportGui_SRCS
