Added Ship module to the StartPage

--- a/src/Mod/Start/StartPage/CMakeLists.txt
+++ b/src/Mod/Start/StartPage/CMakeLists.txt
@@ -26,6 +26,9 @@ SET(StartPage_DATA
     web.png
     blank.png
     complete.jpg
+    Ship.py
+    Ship.png
+    ShipExample.png
 )
 
 INSTALL(FILES ${StartPage_SRCS}
