--- a/configure.ac
+++ b/configure.ac
@@ -649,6 +649,23 @@ fi
 
 AM_CONDITIONAL(HAVE_SPNAV_FOUND, test x"$fc_cv_lib_spnav_avail" = xyes)
 
+
+dnl checking for matplotlib
+dnl **************************************************************************
+fc_matplotlib_avail=no
+AC_MSG_CHECKING([for matplotlib])
+fc_matplotlib_ver=`python -c "import matplotlib as m; print m.__version__;"`;
+if test x$fc_py_ver = x; then
+	AC_MSG_WARN([
+	**** Cannot find matplotlib Python module.
+	Plot Module will not available until matplotlib is installed ****
+    ])
+else
+	fc_matplotlib_avail=yes
+fi;
+AC_MSG_RESULT([yes])
+AM_CONDITIONAL(HAVE_MATPLOTLIB, test x"$fc_matplotlib_avail" = xyes)
+
 #---------------------------------------------------------------------
 #
 # Check if 64-bit platform
