Fixed missing stuff on autotools

--- a/configure.ac
+++ b/configure.ac
@@ -1074,6 +1074,7 @@ src/Mod/Sandbox/Gui/Makefile
 src/Mod/Surfaces/Makefile
 src/Mod/Ship/Makefile
 src/Mod/OpenSCAD/Makefile
+src/Mod/Plot/Makefile
 src/Tools/Makefile
 src/Tools/_TEMPLATE_/Makefile
 src/Tools/_TEMPLATE_/App/Makefile
