PartDesign: put selection filter in separate file in order to be reused by multiple features

--- a/src/Mod/PartDesign/Gui/CMakeLists.txt
+++ b/src/Mod/PartDesign/Gui/CMakeLists.txt
@@ -26,6 +26,7 @@ set(PartDesignGui_LIBS
 
 set(PartDesignGui_MOC_HDRS
     FeaturePickDialog.h
+    ReferenceSelection.h
     TaskPadParameters.h
     TaskPocketParameters.h
     TaskChamferParameters.h
@@ -100,6 +101,8 @@ SET(PartDesignGuiTaskDlgs_SRCS
     FeaturePickDialog.ui
     FeaturePickDialog.cpp
     FeaturePickDialog.h
+    ReferenceSelection.cpp
+    ReferenceSelection.h
     TaskPadParameters.ui
     TaskPadParameters.cpp
     TaskPadParameters.h
