--- a/src/Mod/Plot/CMakeLists.txt
+++ b/src/Mod/Plot/CMakeLists.txt
@@ -2,28 +2,9 @@ SET(PlotMain_SRCS
 	Plot.py
 	InitGui.py
 	PlotGui.py
+	Plot_rc.py
 )
 SOURCE_GROUP("" FILES ${PlotMain_SRCS})
-
-SET(PlotIcons_SRCS
-	resources/icons/Axes.svg
-	resources/icons/Grid.svg
-	resources/icons/Icon.svg
-	resources/icons/Labels.svg
-	resources/icons/Legend.svg
-	resources/icons/Positions.svg
-	resources/icons/Save.svg
-	resources/icons/Series.svg
-)
-SOURCE_GROUP("ploticons" FILES ${PlotIcons_SRCS})
-
-SET(PlotTranslations_SRCS
-	resources/translations/Plot.ts
-	resources/translations/Plot.qm
-	resources/translations/Plot_es-ES.ts
-	resources/translations/Plot_es-ES.qm
-)
-SOURCE_GROUP("plottranslations" FILES ${PlotTranslations_SRCS})
 
 SET(PlotAxes_SRCS
 	plotAxes/__init__.py
@@ -63,11 +44,10 @@ SOURCE_GROUP("plotseries" FILES ${PlotSeries_SRCS})
 SET(PlotUtils_SRCS
 	plotUtils/__init__.py
 	plotUtils/Paths.py
-	plotUtils/Translator.py
 )
 SOURCE_GROUP("plotutils" FILES ${PlotUtils_SRCS})
 
-SET(all_files ${PlotMain_SRCS} ${PlotAxes_SRCS} ${PlotLabels_SRCS} ${PlotPositions_SRCS} ${PlotSave_SRCS} ${PlotSeries_SRCS} ${PlotIcons_SRCS} ${PlotTranslations_SRCS} ${PlotUtils_SRCS})
+SET(all_files ${PlotMain_SRCS} ${PlotAxes_SRCS} ${PlotLabels_SRCS} ${PlotPositions_SRCS} ${PlotSave_SRCS} ${PlotSeries_SRCS} ${PlotUtils_SRCS})
 
 ADD_CUSTOM_TARGET(Plot ALL
     SOURCES ${all_files}
@@ -75,18 +55,6 @@ ADD_CUSTOM_TARGET(Plot ALL
 
 fc_copy_sources(Mod/Plot "${CMAKE_BINARY_DIR}/Mod/Plot" ${all_files})
 
-INSTALL(
-    FILES
-        ${PlotIcons_SRCS}
-    DESTINATION
-        Mod/Plot/resources/icons
-)
-INSTALL(
-    FILES
-        ${PlotTranslations_SRCS}
-    DESTINATION
-        Mod/Plot/resources/translations
-)
 INSTALL(
     FILES
         ${PlotAxes_SRCS}
