Add TKFeat to PartDesign module

--- a/src/Mod/PartDesign/App/Makefile.am
+++ b/src/Mod/PartDesign/App/Makefile.am
@@ -69,6 +69,7 @@ libPartDesign_la_LIBADD   = \
 		-lTKGeomBase \
 		-lTKOffset \
 		-lTKPrim \
+		-lTKFeat \
 		-lTKFillet \
 		-lTKShHealing \
 		-lTKBool \
