--- a/src/Mod/Start/StartPage/CMakeLists.txt
+++ b/src/Mod/Start/StartPage/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(StartPage_DATA
     LoadMRU0.py
     LoadMRU1.py
     LoadMRU2.py
+    LoadArchExample.py
     Mesh.py
     PartDesign.py
     Background.jpg
