Removed surfaces module (simply broken and outdated)

--- a/src/Mod/Makefile.am
+++ b/src/Mod/Makefile.am
@@ -10,7 +10,7 @@ SUBDIRS += Mesh
 #endif
 
 if HAVE_OPENCASCADE
-SUBDIRS += Part Import PartDesign Raytracing Drawing Arch Surfaces Ship OpenSCAD
+SUBDIRS += Part Import PartDesign Raytracing Drawing Arch Ship OpenSCAD
 endif
 
 if HAVE_EIGEN3
