--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -41,6 +41,7 @@ set(PartGui_MOC_HDRS
     TaskFaceColors.h
     TaskShapeBuilder.h
     TaskLoft.h
+    TaskOffset.h
     TaskSweep.h
     TaskCheckGeometry.h
 )
@@ -67,6 +68,7 @@ set(PartGui_UIC_SRCS
     TaskFaceColors.ui
     TaskShapeBuilder.ui
     TaskLoft.ui
+    TaskOffset.ui
     TaskSweep.ui
 )
 qt4_wrap_ui(PartGui_UIC_HDRS ${PartGui_UIC_SRCS})
@@ -158,6 +160,9 @@ SET(PartGui_SRCS
     TaskLoft.cpp
     TaskLoft.h
     TaskLoft.ui
+    TaskOffset.cpp
+    TaskOffset.h
+    TaskOffset.ui
     TaskSweep.cpp
     TaskSweep.h
     TaskSweep.ui
