Created Draft feature for PartDesign

--- a/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/src/Mod/PartDesign/App/CMakeLists.txt
@@ -51,6 +51,8 @@ SET(FeaturesDressUp_SRCS
     FeatureFillet.h
     FeatureChamfer.cpp
     FeatureChamfer.h
+    FeatureDraft.cpp
+    FeatureDraft.h
 )
 SOURCE_GROUP("DressUpFeatures" FILES ${FeaturesDressUp_SRCS})
 
