--- a/src/WindowsInstaller/CopyRelease.bat.in
+++ b/src/WindowsInstaller/CopyRelease.bat.in
@@ -1,4 +1,4 @@
 
 
-copy FreeCAD.msi FreeCAD_0.13.$WCREV$_x86_unstable_setup.msi
-copy FreeCAD.7z  FreeCAD_0.13.$WCREV$_x86_unstable_bin.7z
+copy FreeCAD.msi FreeCAD_0.13.$WCREV$_x86_RC_setup.msi
+copy FreeCAD.7z  FreeCAD_0.13.$WCREV$_x86_RC_bin.7z
